objects/Item_Type__c.object
<CustomObject>
    <description>Resource Types for the event== Per Ticket Chargeable 
Items ==Admissions 
Ticket
Seats 
Seminars
MatchLeads Buyers
MatchLeads Sellers
BoothPackage - Only package items can be grouped to have child items under them. (Wether is item is package. If the item is package, then individual items with count will exist in the package table. To this package you can add only  I - Individual Item pool - A - Addon Item pool )== Per Event Chargeable Items ==AttendeeScanKioskBooth MapItems== Add-on Items - only can be added to package (can not be put in item table but chargeable per ticket if necessary) ==Add-Ons (optional/non-optional)Staff AdmissionAdvertisementLeadScanBreakfastLunchDinnerCocktailWifiElectric</description>
    <fields>
        <fullName>Add_On__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Add On</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_Fee_Amt_per_res__c</fullName>
        <label>BL Fee Amt per res</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BL_Fee_Pct_per_res__c</fullName>
        <label>BL Fee Pct per res</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Badgable__c</fullName>
        <description>Badge is available for this resource type?
N - No Badge   --
B - Badge      --
M - Mark on the badge    --</description>
        <label>Badgable</label>
        <picklist>
            <picklistValues>
                <fullName>B - Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N - No Badge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>M - Mark on the badge</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Badge_Label__c</fullName>
        <label>Badge Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Option_Desc__c</fullName>
        <label>Event Option Desc</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Option_Sort_Order__c</fullName>
        <defaultValue>0</defaultValue>
        <description>any record with sort order 0 or less does not show.</description>
        <label>Event Option Sort Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event_Options_Image_URL__c</fullName>
        <label>Event Options Image URL</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoice_Seq__c</fullName>
        <description>If this flag is set on an item pool tickets are not created in the ticket table however a new row is inserted everytime a ticket is bought.

Applicable for item_type = &quot;Addmissions&quot;

Also there is no tag on the ticket.</description>
        <label>Invoice Seq</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_Type_Number__c</fullName>
        <label>Item Type Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Display Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unlimited__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this flag is set on an item pool tickets are not created in the ticket table however a new row is inserted everytime a ticket is bought.

Applicable for item_type = &quot;Addmissions&quot;

Also there is no tag on the ticket.</description>
        <label>Unlimited</label>
        <type>Checkbox</type>
    </fields>
    <label>BLN Item Type</label>
    <listViews>
        <fullName>Add_ons</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Badge_Label__c</columns>
        <columns>Event_Option_Desc__c</columns>
        <columns>Event_Option_Sort_Order__c</columns>
        <columns>BL_Fee_Amt_per_res__c</columns>
        <columns>BL_Fee_Pct_per_res__c</columns>
        <columns>Add_On__c</columns>
        <columns>Item_Type_Number__c</columns>
        <columns>Event_Options_Image_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Add_On__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Add ons</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Order__c</columns>
        <columns>Event_Option_Desc__c</columns>
        <columns>Event_Option_Sort_Order__c</columns>
        <columns>BL_Fee_Amt_per_res__c</columns>
        <columns>BL_Fee_Pct_per_res__c</columns>
        <columns>Add_On__c</columns>
        <columns>Badgable__c</columns>
        <columns>Badge_Label__c</columns>
        <columns>Item_Type_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Event_Options</fullName>
        <columns>NAME</columns>
        <columns>Badge_Label__c</columns>
        <columns>Event_Option_Desc__c</columns>
        <columns>Event_Option_Sort_Order__c</columns>
        <columns>BL_Fee_Amt_per_res__c</columns>
        <columns>BL_Fee_Pct_per_res__c</columns>
        <columns>Add_On__c</columns>
        <columns>Item_Type_Number__c</columns>
        <columns>Event_Options_Image_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Event_Option_Sort_Order__c</field>
            <operation>greaterThan</operation>
            <value>0</value>
        </filters>
        <label>Event Options</label>
    </listViews>
    <listViews>
        <fullName>Old_Records</fullName>
        <columns>NAME</columns>
        <columns>Badge_Label__c</columns>
        <columns>Item_Type_Number__c</columns>
        <columns>Event_Option_Desc__c</columns>
        <columns>Event_Option_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>6/7/2014 12:00 AM</value>
        </filters>
        <label>Old Records</label>
    </listViews>
    <listViews>
        <fullName>Recently_Created</fullName>
        <columns>NAME</columns>
        <columns>Badge_Label__c</columns>
        <columns>Item_Type_Number__c</columns>
        <columns>Event_Option_Desc__c</columns>
        <columns>Event_Option_Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>6/7/2014 12:00 AM</value>
        </filters>
        <label>Recently Created</label>
    </listViews>
    <nameField>
        <label>Item Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BLN Item Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>